--- a/ignite-shop/package.json
+++ b/ignite-shop/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "@next/font": "13.1.1",
     "@stitches/react": "^1.2.8",
+    "@types/axios": "^0.14.0",
     "@types/node": "18.11.17",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
+    "axios": "^1.2.1",
     "eslint": "8.30.0",
     "eslint-config-next": "13.1.1",
     "keen-slider": "^6.8.5",
